# enterprise-pipeline

./: .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.monitoring.yaml  docker-compose.yaml  pipeline_config.yaml  promptfoo.config.yaml  pyproject.toml
.github/workflows/: eval.yaml
docs/: 01-tool-gap-fixes.md  02-prd.md  03-implementation-plan.md  04-technical-specs.md  deployment-guide.md  security-review.md
docs/adr/: 001-qdrant-over-pgvector.md  002-bm25-sub-scoring.md  003-local-sentence-transformers.md  004-dual-layer-injection-defense.md  005-semantic-router.md  006-hhem-hallucination-detection.md  007-openrouter-llm-gateway.md  008-file-based-worm-audit-log.md  009-hash-based-feature-flags.md  010-asyncio-shadow-mode.md  011-scipy-experiment-analysis.md  012-prometheus-grafana.md  013-file-based-annotation.md  README.md
docs/baselines/: production-baseline.json  real-latency-baselines.json  wave-1-baseline.json  wave-2-baseline.json  wave-3-baseline.json  wave-4-baseline.json  wave-5-baseline.json  wave-6-baseline.json  wave-7-baseline.json
docs/checklists/: wave-2-completion.md  wave-4-completion.md
docs/issues/: 001-ec4-cohere-rerank-validation.md  002-backfill-null-baselines.md  003-compression-sentence-logging.md  004-routing-real-embedding-validation.md  005-multi-query-recall-live-validation.md  (+8 more)
environments/: base.yaml  development.yaml  production.yaml
experiment_configs/: flags.yaml
golden_dataset/: README.md  faithfulness_tests.jsonl  promptfoo_tests.jsonl  synthetic_tests.jsonl
monitoring/: prometheus.yml
prompts/: candidate.txt  rag_system.txt
scripts/: annotate.py  benchmark_latency.py  capture_latency_baselines.py  capture_wave1_baselines.py  check_regression.py  eval_assertions.py  expand_golden_dataset.py  generate_synthetic_tests.py  ingest_documents.py  launch_phoenix.py  load_test.py  run_adversarial_tests.py  run_daily_eval.py  run_e2e_trace.py  run_experiment_analysis.py  run_failure_triage.py  run_weekly_flywheel.py  test_multi_query_recall.py  test_routing_accuracy.py  validate_environment.py  validate_production.py  validate_routing.py  wave5_checks.py
src/: main.py
tests/: conftest.py
(+134 files in other folders)
